third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/leading-us-oct.stderr
TOML parse error at line 1, column 18
  |
1 | leading-us-oct = _0o1
  |                  ^
invalid integer
expected leading digit
